<resources>

    <string name="app_name">油盐罐</string>

    <!--    MenuMain    -->
    <string name="action_open_drawer">打开侧栏</string>
    <string name="action_feedback">用户反馈</string>
    <string name="action_log_out">退出账号</string>
    <string name="action_add_course">添加课程</string>
    <string name="action_refresh_book">刷新数据</string>


    <!--    MenuDrawer    -->
    <string name="id_link">GusteauScuter</string>

    <string name="nav_home">日程管理</string>
    <string name="nav_course">课表管理</string>
    <string name="nav_library">我的借阅</string>
    <string name="nav_search_book">馆藏查询</string>
    <string name="nav_message">资讯定制</string>
    <string name="nav_more">更多功能待开发</string>
    <string name="nav_collections">校园问卷</string>
    <string name="nav_setting">软件设置</string>
    <string name="nav_feedback">问题反馈</string>


    <!--    library information   -->
    <string name="login_library">图书馆登陆</string>



    <!--    library toast information   -->

    <string name="failed_to_login_library">用户名或密码错误！</string>
    <string name="succeed_to_getBooks">获取图书列表成功</string>
    <string name="failed_to_getBooks">用户名或密码错误，请退出重新登陆！</string>
    <string name="server_failed">服务器繁忙，请稍后再试！</string>>
    <string name="re_login">已退出当前用户，请重新登陆！</string>

    <string name="ing_getBookInformation">正在获取中...</string>
    <string name="succeed_to_getBookInformation">获取图书详细信息成功</string>
    <string name="failed_to_getBookInformation">未能获取图书详细信息！</string>

    <string name="book_detail_not_exist">\t 抱歉，豆瓣尚无本书详细信息！</string>


    <string-array name="SearchBookType">
        <item>标题</item>
        <item>作者</item>
        <item>ISBN</item>
        <item>ISSN</item>
        <item>出版社</item>
        <item>分类号</item>
        <item>主题词</item>
        <item>统一刊号</item>
        <item>馆藏条码</item>
    </string-array>


    <!--    CardBook information   -->
    <string name="title_default">《无题》</string>
    <string name="borrowDay_default">借阅:2015/01/02</string>
    <string name="returnDay_default">归还:2015/12/31</string>
    <string name="borrowedTimes_default">续借次数:0/0</string>
    <string name="borrowButton">续          借</string>


    <!--    EduSystem information   -->

    <string name="login_edusys">教务系统登陆</string>



    <!--    Setting information   -->

    <string name="check_update">检查更新</string>
    <string name="update_state_start">获取版本信息中...</string>
    <string name="update_state_no">当前已是最新版本，无需更新</string>
    <string name="feedback">反馈建议</string>
    <string name="send_email_to">mailto:gusteauscuter@163.com</string>
    <string name="about">关于软件</string>
        <string name="about_description">
                           油盐罐
            \n
            \n       又意“悠研管”YYG
            \n （悠闲的研究生时间管理软件）
            \n
            \n 旨在打造一款在校研究生使用的软件
            \n 方便研究生日常学习生活的日程管理
            \n
            \n 后期将根据大家的需求继续完善功能
            \n 预计包括：课表定制、校园资讯定制
            \n 等一系列实现最大程度定制化的功能
        </string>


    <string name="check_toKnow">
        勾选“南校”或“北校”\n彩色图书即为在馆可借\n但加载速度将因此有所降低</string>
    <!--    system information   -->
    <string name="internet_not_connected">网络连接失败，请检查设置！</string>
    <string name="exit_hint">再按一次，退出油盐罐儿！</string>



    <!--    system title of some activites   -->

    <string name="title_activity_about">关于软件</string>
    <string name="title_activity_book_detail">书籍详情</string>
    <string name="title_activity_base">反馈建议</string>
    <string name="title_activity_search_result">搜索结果</string>
    <string name="title_activity_add_course">添加课程</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course_detail">课程详情</string>


</resources>
