<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_course"
        android:icon="@drawable/ic_course"
        android:title="@string/nav_course"
        android:checkable="true"/>
-->
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_library"
        android:title="@string/nav_library"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_search_book"
        android:icon="@drawable/ic_search_book"
        android:title="@string/nav_search_book"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/nav_setting"
        android:checkable="true"/>

</menu>